--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
+    "semantic-ui-calendar": "0.0.8",
     "semantic-ui-css": "^2.4.1",
     "vanilla-router": "^1.2.7"
   }
